--- a/tree-sitter-dscexpression/package.json
+++ b/tree-sitter-dscexpression/package.json
@@ -1,12 +1,16 @@
 {
   "name": "tree-sitter-dscexpression",
-  "version": "0.1.0",
-  "description": "DSCExpression grammar for tree-sitter",
+  "version": "0.0.1",
+  "description": "Dscexpression grammar for tree-sitter",
+  "repository": "github:tree-sitter/tree-sitter-dscexpression",
+  "license": "MIT",
   "main": "bindings/node",
   "types": "bindings/node",
   "keywords": [
+    "incremental",
     "parsing",
-    "incremental"
+    "tree-sitter",
+    "dscexpression"
   ],
   "files": [
     "grammar.js",
@@ -20,24 +24,30 @@
     "node-addon-api": "^7.1.0",
     "node-gyp-build": "^4.8.0"
   },
+  "devDependencies": {
+    "prebuildify": "^6.0.0",
+    "tree-sitter-cli": "^0.22.2"
+  },
   "peerDependencies": {
     "tree-sitter": "^0.21.0"
   },
   "peerDependenciesMeta": {
-    "tree_sitter": {
+    "tree-sitter": {
       "optional": true
     }
   },
-  "devDependencies": {
-    "tree-sitter-cli": "^0.22.2",
-    "prebuildify": "^6.0.0"
-  },
   "scripts": {
-    "test": "tree-sitter test",
     "install": "node-gyp-build",
-    "prebuildify": "prebuildify --napi --strip"
+    "prebuildify": "prebuildify --napi --strip",
+    "build": "tree-sitter generate --no-bindings",
+    "build-wasm": "tree-sitter build --wasm",
+    "test": "tree-sitter test",
+    "parse": "tree-sitter parse"
   },
   "tree-sitter": [
-    {"file-types": ["DSCExpressoin"]}
+    {
+      "scope": "source.dscexpression",
+      "injection-regex": "^dscexpression$"
+    }
   ]
 }
