--- a/.pipelines/DSC-Official.yml
+++ b/.pipelines/DSC-Official.yml
@@ -240,7 +240,7 @@ extends:
         - task: RustInstaller@1
           inputs:
             rustVersion: ms-stable
-            toolchainFeed: https://msazure.pkgs.visualstudio.com/_packaging/RustTools/nuget/v3/index.json
+            toolchainFeed: https://pkgs.dev.azure.com/mscodehub/_packaging/RustTools/nuget/v3/index.json
             cratesIoFeedOverride: sparse+https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/Cargo/index/
             additionalTargets: $(buildTarget)
           displayName: Install Rust
@@ -271,7 +271,7 @@ extends:
         - task: RustInstaller@1
           inputs:
             rustVersion: ms-stable
-            toolchainFeed: https://msazure.pkgs.visualstudio.com/_packaging/RustTools/nuget/v3/index.json
+            toolchainFeed: https://pkgs.dev.azure.com/mscodehub/_packaging/RustTools/nuget/v3/index.json
             cratesIoFeedOverride: sparse+https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/Cargo/index/
             additionalTargets: $(buildTarget)
           displayName: Install Rust
@@ -310,7 +310,7 @@ extends:
         - task: RustInstaller@1
           inputs:
             rustVersion: ms-stable
-            toolchainFeed: https://msazure.pkgs.visualstudio.com/_packaging/RustTools/nuget/v3/index.json
+            toolchainFeed: https://pkgs.dev.azure.com/mscodehub/_packaging/RustTools/nuget/v3/index.json
             cratesIoFeedOverride: sparse+https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/Cargo/index/
             additionalTargets: $(buildTarget)
           displayName: Install Rust
