--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "./dscecho/Cargo.toml",
         "./osinfo/Cargo.toml",
         "./registry/Cargo.toml",
+        "./resources/win_service/Cargo.toml",
         "./runcommandonset/Cargo.toml",
         "./tools/test_group_resource/Cargo.toml",
         "./tools/dsctest/Cargo.toml",
