--- a/resources/win_service/Cargo.toml
+++ b/resources/win_service/Cargo.toml
@@ -12,6 +12,7 @@ lto = true
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+offreg = { path = "../../offreg" }
 registry = "1.2"
 schemars = "1.0.0-alpha.15"
 serde = { version = "1.0", features = ["derive"] }
