--- a/offreg/Cargo.toml
+++ b/offreg/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+thiserror = "2.0.3"
+tracing = "0.1.26"
+windows-result = "0.2.0"
+windows-strings = "0.2.0"
+windows-sys= { version = "0.59.0", features = ["Wdk_System_OfflineRegistry", "Win32_Security", "Win32_Foundation"] }
