fix using resource on current OS

--- a/dsc/examples/windows_services.dsc.yaml
+++ b/dsc/examples/windows_services.dsc.yaml
@@ -4,4 +4,4 @@ resources:
 - name: services
   type: Microsoft.Windows/Service
   properties:
-    systemRoot: "D:"
+    systemRoot: "[systemRoot()]"
