--- a/dsc/examples/windows_drivers.dsc.yaml
+++ b/dsc/examples/windows_drivers.dsc.yaml
@@ -1,5 +1,8 @@
 # Example for exporting Windows drivers information
 $schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2024/04/config/document.json
+metadata:
+  Microsoft.DSC:
+    securityContext: Elevated
 resources:
 - name: drivers
   type: Microsoft.Windows/Driver
