--- a/registry/Cargo.toml
+++ b/registry/Cargo.toml
@@ -3,6 +3,11 @@ name = "registry"
 version = "1.0.0"
 edition = "2021"
 
+[package.metadata.i18n]
+available-locales = ["en-us"]
+default-locale = "en-us"
+load-path = "locales"
+
 [profile.release]
 strip = true
 # optimize for size
@@ -14,6 +19,7 @@ lto = true
 clap = { version = "4.5", features = ["derive"] }
 crossterm = "0.28"
 registry = "1.2"
+rust-i18n = { version = "3.0" }
 schemars = "0.8"
 serde = "1.0"
 serde_json = "1.0"
