--- a/.pipelines/DSC-Common.yml
+++ b/.pipelines/DSC-Common.yml
@@ -33,8 +33,8 @@ stages:
     - checkout: self
       path: DSC
     - pwsh: |
-        Get-Location
-        dir
+        write-verbose -verbose (Get-Location | out-string)
+        write-verbose -verbose (dir | out-string)
         Set-Location "$(Build.SourcesDirectory)\DSC"
         $packageVersion = ./build.ps1 -GetPackageVersion
         $vstsCommandString = "vso[task.setvariable variable=Version;isoutput=true]$packageVersion"
