--- a/.pipelines/DSC-Common.yml
+++ b/.pipelines/DSC-Common.yml
@@ -61,9 +61,9 @@ stages:
       ob_artifactSuffix: $(Suffix)
       repoRoot: '$(SourcesDirectory)\DSC'
       signSrcPath: '$(SourcesDirectory)\out'
-      ob_sdl_sbom_enabled: $[ parameters.OfficialBuild ]
-      ob_signing_setup_enabled: $[ parameters.OfficialBuild ]
-      ob_sdl_codeql_compiled_enabled: $[ parameters.OfficialBuild ]
+      ob_sdl_sbom_enabled: ${{ parameters.OfficialBuild }}
+      ob_signing_setup_enabled: ${{ parameters.OfficialBuild }}
+      ob_sdl_codeql_compiled_enabled: ${{ parameters.OfficialBuild }}
     pool:
       type: windows
     displayName: BuildWin
@@ -166,9 +166,9 @@ stages:
     variables:
       ob_outputDirectory: '$(ArtifactStagingDirectory)'
       ob_sdl_tsa_configFile: '$(SourcesDirectory)\DSC\.config\tsaoptions.json'
-      ob_sdl_sbom_enabled: $[ parameters.OfficialBuild ]
-      ob_signing_setup_enabled: $[ parameters.OfficialBuild ]
-      ob_sdl_codeql_compiled_enabled: $[ parameters.OfficialBuild ]
+      ob_sdl_sbom_enabled: ${{ parameters.OfficialBuild }}
+      ob_signing_setup_enabled: ${{ parameters.OfficialBuild }}
+      ob_sdl_codeql_compiled_enabled: ${{ parameters.OfficialBuild }}
     pool:
       type: windows
     steps:
