--- a/.pipelines/DSC-Common.yml
+++ b/.pipelines/DSC-Common.yml
@@ -66,7 +66,10 @@ stages:
       ob_sdl_codeql_compiled_enabled: ${{ parameters.OfficialBuild }}
     pool:
       type: windows
-      vmImage: 'onebranch.azurecr.io/windows/ltsc2022/vse2022:latest'
+      if ${{ parameters.OfficialBuild }}:
+        vmImage: 'onebranch.azurecr.io/windows/ltsc2022/vse2022:latest'
+      if ${{ not(parameters.OfficialBuild) }}:
+        vmImage: 'windows-latest'
     displayName: BuildWin
     steps:
     - checkout: self
