--- a/.pipelines/DSC-Common.yml
+++ b/.pipelines/DSC-Common.yml
@@ -47,10 +47,10 @@ stages:
     dependsOn: SetPackageVersion
     strategy:
       matrix:
-        Windows x64:
+        Windows_x64:
           Suffix: x64
           buildName: x86_64-pc-windows-msvc
-        Windows x64_arm64:
+        Windows_x64_arm64:
           Suffix: arm64
           buildName: aarch64-pc-windows-msvc
     variables:
@@ -68,7 +68,7 @@ stages:
       type: windows
       if ${{ parameters.OfficialBuild }}:
         vmImage: 'onebranch.azurecr.io/windows/ltsc2022/vse2022:latest'
-      if ${{ not(parameters.OfficialBuild) }}:
+      if ${{ eq(parameters.OfficialBuild, false) }}:
         vmImage: 'windows-latest'
     displayName: BuildWin
     steps:
